# ltv-drivetrain-controllers

./: CMakeLists.txt  README.md  format.sh
eigen3/Eigen/: Cholesky  Core  LU
eigen3/Eigen/src/Cholesky/: LLT.h
eigen3/Eigen/src/Core/: ArithmeticSequence.h  ArrayBase.h  AssignEvaluator.h  Block.h  ConditionEstimator.h  CoreEvaluators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Dot.h  EigenBase.h  Fill.h  FindCoeff.h  ForceAlignedAccess.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  IndexedView.h  InnerProduct.h  Inverse.h  Map.h  MapBase.h  MathFunctions.h  MathFunctionsImpl.h  Matrix.h  MatrixBase.h  NestByValue.h  NoAlias.h  NumTraits.h  PartialReduxEvaluator.h  PermutationMatrix.h  PlainObjectBase.h  Product.h  ProductEvaluators.h  (+15 more)
eigen3/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h  GenericPacketMathFunctionsFwd.h
eigen3/Eigen/src/Core/functors/: AssignmentFunctors.h  BinaryFunctors.h  NullaryFunctors.h  TernaryFunctors.h  UnaryFunctors.h
eigen3/Eigen/src/Core/products/: GeneralBlockPanelKernel.h  GeneralMatrixMatrix.h  GeneralMatrixMatrixTriangular.h  GeneralMatrixVector.h  Parallelizer.h  SelfadjointMatrixMatrix.h  SelfadjointMatrixVector.h  SelfadjointProduct.h  SelfadjointRank2Update.h  TriangularMatrixMatrix.h  TriangularMatrixVector.h  TriangularSolverMatrix.h
eigen3/Eigen/src/Core/util/: BlasUtil.h  ConfigureVectorization.h  Constants.h  ForwardDeclarations.h  IndexedViewHelper.h  IntegralConstant.h  Macros.h  Memory.h  Meta.h  MoreMeta.h  ReshapedHelper.h  SymbolicIndex.h  XprHelper.h
eigen3/Eigen/src/LU/: PartialPivLU.h
eigen3/unsupported/Eigen/: MatrixFunctions
eigen3/unsupported/Eigen/src/MatrixFunctions/: MatrixExponential.h  StemFunction.h
src/: ltv_diff_drive_main.cpp  ltv_unicycle_main.cpp
src/frc/: LQR.h
src/wpi/math/controller/: lqr.hpp  ltv_differential_drive_controller.cpp  ltv_differential_drive_controller.hpp  ltv_unicycle_controller.cpp  ltv_unicycle_controller.hpp
src/wpi/math/geometry/: pose2d.hpp  rotation2d.hpp  translation2d.hpp
src/wpi/math/system/: differential_drive_from_sysid.hpp  discretize_ab.hpp  linear_system.hpp
src/wpi/math/util/: cost_matrix.hpp
